<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewDoFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_margin"
        android:layout_margin="@dimen/common_spacing"
        android:hint="@string/add_title"
        android:textSize="@dimen/data_text_size"
        android:padding="@dimen/common_spacing"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_margin"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:hint="@string/add_desc"
        android:textSize="@dimen/data_text_size"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save"
        android:layout_marginTop="@dimen/margin_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        />

</androidx.constraintlayout.widget.ConstraintLayout>